--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -47,6 +47,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to check, given two strings, if one is a permutation of the other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def are_perm_1(s1, s2):  # O(nlogn)\n",
+    "    if len(s1) != len(s2):\n",
+    "        return False\n",
+    "    \n",
+    "    sorted_s1 = ''.join(sorted(s1))\n",
+    "    sorted_s2 = ''.join(sorted(s2))\n",
+    "    return sorted_s1 == sorted_s2\n",
+    "\n",
+    "assert(are_perm_1('abc', 'cba') == True)\n",
+    "assert(are_perm_1('hohoho', 'hohoh') == False)\n",
+    "assert(are_perm_1('hohoho', 'hohoh!') == False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def are_perm_2(s1, s2):  # O(n)\n",
+    "    if len(s1) != len(s2):\n",
+    "        return False\n",
+    "    \n",
+    "    # Count characters for each string\n",
+    "    count_s1 = {}\n",
+    "    count_s2 = {}\n",
+    "    for i in range(len(s1)):\n",
+    "        c1 = s1[i]\n",
+    "        if c1 in count_s1:\n",
+    "            count_s1[c1] += 1\n",
+    "        else:\n",
+    "            count_s1[c1] = 1\n",
+    "            \n",
+    "        c2 = s2[i]\n",
+    "        if c2 in count_s2:\n",
+    "            count_s2[c2] += 1\n",
+    "        else:\n",
+    "            count_s2[c2] = 1\n",
+    "    \n",
+    "    # Compare counts\n",
+    "    for c in count_s1:\n",
+    "        if count_s1[c] != count_s2[c]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "assert(are_perm_2('abc', 'cba') == True)\n",
+    "assert(are_perm_2('hohoho', 'hohoh') == False)\n",
+    "assert(are_perm_2('hohoho', 'hohoh!') == False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
