Add permutation of palindrome

--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -130,6 +130,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to check is a string is a permutation of a palindrome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_permutation_of_palindrome(s):\n",
+    "    # If len(s) is odd, exactly 1 char should have an odd count. Impossible to have 0 odd count i.e. all even to sum up to odd.\n",
+    "    # If len(s) is even, exactly 0 char should have an odd count. Impossible to have 1 odd count to sum up to even.\n",
+    "    \n",
+    "    # Count characters in s\n",
+    "    char_count = {}\n",
+    "    odd_char_count = 0\n",
+    "    for c in s:\n",
+    "        c = c.lower()\n",
+    "        if c in char_count:\n",
+    "            char_count[c] += 1\n",
+    "            if char_count[c] % 2 == 0:\n",
+    "                odd_char_count -= 1\n",
+    "            else:\n",
+    "                odd_char_count += 1\n",
+    "        else:\n",
+    "            char_count[c] = 1\n",
+    "            odd_char_count += 1\n",
+    "                \n",
+    "    # Check\n",
+    "    return odd_char_count <= 1\n",
+    "    \n",
+    "assert(is_permutation_of_palindrome('Tact Coa') == False)\n",
+    "assert(is_permutation_of_palindrome('Tommto') == True)\n",
+    "assert(is_permutation_of_palindrome('_vw^^') == False)\n",
+    "assert(is_permutation_of_palindrome('_vv^^') == True)\n",
+    "assert(is_permutation_of_palindrome('cup') == False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
