Add one edit away

--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a function to check if all characters in a string are unique."
+    "## Write a function to check if all characters in a string are unique"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a function to check is a string is a permutation of a palindrome"
+    "## Write a function to check if a string is a permutation of a palindrome"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_permutation_of_palindrome(s):\n",
+    "def is_permutation_of_palindrome_1(s):  # Count the number of characters with an odd count\n",
     "    # If len(s) is odd, exactly 1 char should have an odd count. Impossible to have 0 odd count i.e. all even to sum up to odd.\n",
     "    # If len(s) is even, exactly 0 char should have an odd count. Impossible to have 1 odd count to sum up to even.\n",
     "    \n",
@@ -164,11 +164,95 @@
     "    # Check\n",
     "    return odd_char_count <= 1\n",
     "    \n",
-    "assert(is_permutation_of_palindrome('Tact Coa') == False)\n",
-    "assert(is_permutation_of_palindrome('Tommto') == True)\n",
-    "assert(is_permutation_of_palindrome('_vw^^') == False)\n",
-    "assert(is_permutation_of_palindrome('_vv^^') == True)\n",
-    "assert(is_permutation_of_palindrome('cup') == False)"
+    "assert(is_permutation_of_palindrome_1('Tact Coa') == False)\n",
+    "assert(is_permutation_of_palindrome_1('Tommto') == True)\n",
+    "assert(is_permutation_of_palindrome_1('_vw^^') == False)\n",
+    "assert(is_permutation_of_palindrome_1('_vv^^') == True)\n",
+    "assert(is_permutation_of_palindrome_1('cup') == False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_permutation_of_palindrome_2(s):  # Same as above, but just odd or not for each character\n",
+    "    char_is_odd = [False for i in range(128)]  # There are 128 ascii codes: https://ascii.cl/\n",
+    "    \n",
+    "    for c in s:\n",
+    "        ascii_code = ord(c.lower())\n",
+    "        char_is_odd[ascii_code] = not char_is_odd[ascii_code]  # Flip True/False\n",
+    "        \n",
+    "    odd_char_count = 0\n",
+    "    for is_odd in char_is_odd:\n",
+    "        if is_odd:\n",
+    "            odd_char_count += 1\n",
+    "            if odd_char_count > 1:\n",
+    "                return False\n",
+    "    return True\n",
+    "    \n",
+    "assert(is_permutation_of_palindrome_2('Tact Coa') == False)\n",
+    "assert(is_permutation_of_palindrome_2('Tommto') == True)\n",
+    "assert(is_permutation_of_palindrome_2('_vw^^') == False)\n",
+    "assert(is_permutation_of_palindrome_2('_vv^^') == True)\n",
+    "assert(is_permutation_of_palindrome_2('cup') == False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Given two strings, write a function to check if one is an edit away (insert, remove, or replace a character) from the other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_an_edit_away(s1, s2):\n",
+    "    if abs(len(s1) - len(s2)) > 1:\n",
+    "        return False\n",
+    "    \n",
+    "    if len(s1) == len(s2):\n",
+    "        edited_once = False\n",
+    "        for i in range(len(s1)):\n",
+    "            if s1[i] == s2[i]:\n",
+    "                continue\n",
+    "            if edited_once:  # 2nd time diff. characters appear. Done.\n",
+    "                return False\n",
+    "            edited_once = True  # 1st time diff. characters appear\n",
+    "        return True\n",
+    "    \n",
+    "    # One is a character shorter than the other\n",
+    "    if len(s1) < len(s2):\n",
+    "        shorter = s1\n",
+    "        longer = s2\n",
+    "    else:\n",
+    "        shorter = s2\n",
+    "        longer = s1\n",
+    "\n",
+    "    edited_once = False\n",
+    "    for i in range(len(longer)):\n",
+    "        if (not edited_once):\n",
+    "            if i == len(longer) - 1:  # No edit till the last letter of longer. Only adding the last character.\n",
+    "                return True\n",
+    "            if shorter[i] == longer[i]:\n",
+    "                continue\n",
+    "            edited_once = True\n",
+    "        else:\n",
+    "            if shorter[i - 1] == longer[i]:\n",
+    "                continue\n",
+    "            return False\n",
+    "    return True\n",
+    "            \n",
+    "assert(is_an_edit_away('pale', 'ple') == True)\n",
+    "assert(is_an_edit_away('pales', 'pale') == True)\n",
+    "assert(is_an_edit_away('pale', 'bale') == True)\n",
+    "assert(is_an_edit_away('pale', 'bake') == False)\n",
+    "assert(is_an_edit_away('yay', 'hay!') == False)"
    ]
   },
   {
