--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -256,6 +256,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to display a character and its repeat count. For example, 'aabcccccaaa' becomes 'a2b1c5a3'. If the compressed string is not shorter, return the original string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compress_str(s):\n",
+    "    compressed_lst = []\n",
+    "    char = s[0]\n",
+    "    count = 1\n",
+    "    \n",
+    "    for i in range(1, len(s)):\n",
+    "        if s[i] == char:\n",
+    "            count += 1\n",
+    "        elif len(compressed_lst) + 2 >= len(s):  # Check this condition in real-time to avoid a loop just to check this in the beginning\n",
+    "            return s\n",
+    "        else:\n",
+    "            compressed_lst.append(char)\n",
+    "            compressed_lst.append(str(count))\n",
+    "            # Reset\n",
+    "            char = s[i]\n",
+    "            count = 1\n",
+    "            \n",
+    "    # Last char\n",
+    "    if len(compressed_lst) + 2 >= len(s):\n",
+    "        return s\n",
+    "    compressed_lst.append(char)\n",
+    "    compressed_lst.append(str(count))\n",
+    "    \n",
+    "    return ''.join(compressed_lst)\n",
+    "\n",
+    "assert(compress_str('aabcccccaaa') == 'a2b1c5a3')\n",
+    "assert(compress_str('abcdefg') == 'abcdefg')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
