Add rotate an image

--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -298,10 +298,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to rotate an image, an NxN matrix, by 90 degrees"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def rotate_90degrees(m):\n",
+    "    n = len(m)\n",
+    "    for i in range(n // 2):\n",
+    "        for j in range(i, n-i-1):\n",
+    "            temp = m[i][j]\n",
+    "            m[i][j] = m[n-j-1][i]\n",
+    "            m[n-j-1][i] = m[n-i-1][n-j-1]\n",
+    "            m[n-i-1][n-j-1] = m[j][n-i-1]\n",
+    "            m[j][n-i-1] = temp\n",
+    "    return m\n",
+    "            \n",
+    "assert(rotate_90degrees([[ 0,  1,  2,  3],\n",
+    "                         [ 4,  5,  6,  7],\n",
+    "                         [ 8,  9, 10, 11],\n",
+    "                         [12, 13, 14, 15]])) == [[12,  8,  4,  0],\n",
+    "                                                 [13,  9,  5,  1],\n",
+    "                                                 [14, 10,  6,  2],\n",
+    "                                                 [15, 11,  7,  3]]\n",
+    "assert(rotate_90degrees([[11, 22],\n",
+    "                         [33, 44]]) == [[33, 11],\n",
+    "                                        [44, 22]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
