--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -336,6 +336,54 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Write a funtion that, if an element in an MxN matrix is 0, its row and column are set to 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_zeros(m):\n",
+    "    num_rows = len(m)\n",
+    "    num_cols = len(m[0])\n",
+    "    \n",
+    "    # Find which rows and cols have zeros\n",
+    "    rows = set()\n",
+    "    cols = set()\n",
+    "    \n",
+    "    for row in range(num_rows):\n",
+    "        for col in range(num_cols):\n",
+    "            if m[row][col] == 0:\n",
+    "                rows.add(row)\n",
+    "                cols.add(col)\n",
+    "                \n",
+    "    # Set rows zero\n",
+    "    for row in rows:\n",
+    "        for col in range(num_cols):\n",
+    "            m[row][col] = 0\n",
+    "    \n",
+    "    # Set cols zero\n",
+    "    for col in cols:\n",
+    "        for row in range(num_rows):\n",
+    "            m[row][col] = 0\n",
+    "            \n",
+    "    return m\n",
+    "\n",
+    "assert(set_zeros([[1, 0, 2],\n",
+    "                  [3, 4, 5],\n",
+    "                  [6, 7, 0]]) == [[0, 0, 0],\n",
+    "                                  [3, 0, 0],\n",
+    "                                  [0, 0, 0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
