--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -380,6 +380,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function, given two strings, that checks is one is a rotation of the other using only one call to the isSubstring method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_rotation(s1, s2):\n",
+    "    if len(s1) != len(s2):\n",
+    "        return False\n",
+    "    \n",
+    "    s1_extended = s1 + s1\n",
+    "    return s2 in s1_extended\n",
+    "\n",
+    "assert(is_rotation('waterbottle', 'erbottlewat')) == True\n",
+    "assert(is_rotation('abc', 'cba')) == False\n",
+    "assert(is_rotation('ab', 'a')) == False"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
