--- a/algo_and_ds/arrays_and_strings.ipynb
+++ b/algo_and_ds/arrays_and_strings.ipynb
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a function, given two strings, that checks is one is a rotation of the other using only one call to the isSubstring method"
+    "## Write a function, given two strings, that checks if one is a rotation of the other using only one call to the isSubstring method"
    ]
   },
   {
