Add 2nd way of removing dups in LL

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_duplicates(ll):\n",
+    "def remove_duplicates_1(ll):  # With a hash set, O(n)\n",
     "    in_ll = set()\n",
     "    \n",
     "    previous = None\n",
@@ -89,17 +89,38 @@
     "    while pointer is not None:\n",
     "        if pointer.value in in_ll:  # If duplicate, skip\n",
     "            previous.next_node = pointer.next_node\n",
-    "            pointer = pointer.next_node\n",
     "        else:\n",
     "            in_ll.add(pointer.value)\n",
     "            previous = pointer\n",
-    "            pointer = pointer.next_node\n",
-    "            \n",
+    "        pointer = pointer.next_node\n",
+    "        \n",
     "    return ll\n",
     "\n",
-    "assert(str(remove_duplicates(LinkedList.get_ll_from_list([1, 1, 2, 3, 5, 1]))) == '1, 2, 3, 5')\n",
-    "assert(str(remove_duplicates(LinkedList.get_ll_from_list([3, 3, 17, 3, 17]))) == '3, 17')\n",
-    "assert(str(remove_duplicates(LinkedList.get_ll_from_list([6, 7, 8, 9]))) == '6, 7, 8, 9')"
+    "assert(str(remove_duplicates_1(LinkedList.get_ll_from_list([1, 1, 2, 3, 5, 1]))) == '1, 2, 3, 5')\n",
+    "assert(str(remove_duplicates_1(LinkedList.get_ll_from_list([3, 3, 17, 3, 17]))) == '3, 17')\n",
+    "assert(str(remove_duplicates_1(LinkedList.get_ll_from_list([6, 7, 8, 9]))) == '6, 7, 8, 9')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_duplicates_2(ll):  # Without extra space, O(n^2)\n",
+    "    p1 = ll.head  # Init p1\n",
+    "    while p1 is not None:\n",
+    "        p2 = p1  # Init p2\n",
+    "        while (p2 is not None) and (p2.next_node is not None):\n",
+    "            if p2.next_node.value == p1.value:\n",
+    "                p2.next_node = None if (p2.next_node.next_node is None) else p2.next_node.next_node\n",
+    "            p2 = p2.next_node\n",
+    "        p1 = p1.next_node\n",
+    "    return ll\n",
+    "\n",
+    "assert(str(remove_duplicates_2(LinkedList.get_ll_from_list([1, 1, 2, 3, 5, 1]))) == '1, 2, 3, 5')\n",
+    "assert(str(remove_duplicates_2(LinkedList.get_ll_from_list([3, 3, 17, 3, 17]))) == '3, 17')\n",
+    "assert(str(remove_duplicates_2(LinkedList.get_ll_from_list([6, 7, 8, 9]))) == '6, 7, 8, 9')"
    ]
   },
   {
