Add kth from last ll

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -124,6 +124,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to find the kth to last element (k is 0-based)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_kth_to_last_1(ll, k):  # Brute force way :(\n",
+    "    # Find length of ll\n",
+    "    len_ = 0\n",
+    "    pointer = ll.head\n",
+    "    while pointer is not None:\n",
+    "        len_ += 1\n",
+    "        pointer = pointer.next_node\n",
+    "    \n",
+    "    if (len_ - k - 1) < 0:  # Out of bounds\n",
+    "        return None\n",
+    "    \n",
+    "    # Find kth from last\n",
+    "    pointer = ll.head\n",
+    "    for i in range(len_ - k - 1):\n",
+    "        pointer = pointer.next_node\n",
+    "        \n",
+    "    return pointer.value\n",
+    "    \n",
+    "assert(find_kth_to_last_1(LinkedList.get_ll_from_list([1, 1, 2, 3]), k=1) == 2)\n",
+    "assert(find_kth_to_last_1(LinkedList.get_ll_from_list([9, 8, 7, 6]), k=2) == 8)\n",
+    "assert(find_kth_to_last_1(LinkedList.get_ll_from_list([777]), k=1) is None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_kth_to_last_2(ll, k):  # Runner way ^_^\n",
+    "    # Fast-forward the runner by k+1\n",
+    "    runner = ll.head\n",
+    "    for i in range(k + 1):\n",
+    "        if runner is None:  # Out of bounds\n",
+    "            return None\n",
+    "        runner = runner.next_node\n",
+    "        \n",
+    "    # When runner reaches the end, the main pointer is kth from last\n",
+    "    pointer = ll.head\n",
+    "    while runner is not None:\n",
+    "        runner = runner.next_node\n",
+    "        pointer = pointer.next_node\n",
+    "        \n",
+    "    return pointer.value\n",
+    "    \n",
+    "assert(find_kth_to_last_2(LinkedList.get_ll_from_list([1, 1, 2, 3]), k=1) == 2)\n",
+    "assert(find_kth_to_last_2(LinkedList.get_ll_from_list([9, 8, 7, 6]), k=2) == 8)\n",
+    "assert(find_kth_to_last_2(LinkedList.get_ll_from_list([777]), k=1) is None)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
