Add recursive find kth to last

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -188,6 +188,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_kth_to_last_3(ll, k):  # Recursive\n",
+    "    \n",
+    "    def recursive_get_kth_to_last(head_node, k):\n",
+    "        if head_node.next_node is None:\n",
+    "            if k == 0:\n",
+    "                return (head_node, 0)\n",
+    "            return (None, 0)\n",
+    "        \n",
+    "        node, index = recursive_get_kth_to_last(head_node.next_node, k)\n",
+    "        index += 1\n",
+    "        if index == k:\n",
+    "            return (head_node, k)\n",
+    "        return (node, index)\n",
+    "    \n",
+    "    node, index = recursive_get_kth_to_last(ll.head, k)\n",
+    "    if node is None:\n",
+    "        return None\n",
+    "    return node.value\n",
+    "    \n",
+    "assert(find_kth_to_last_3(LinkedList.get_ll_from_list([1, 1, 2, 3]), k=1) == 2)\n",
+    "assert(find_kth_to_last_3(LinkedList.get_ll_from_list([9, 8, 7, 6]), k=2) == 8)\n",
+    "assert(find_kth_to_last_3(LinkedList.get_ll_from_list([777]), k=1) is None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
