Add remove a node

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -14,7 +14,25 @@
     "class LinkedList:\n",
     "    def __init__(self):\n",
     "        self.head = None  # Node\n",
-    "    \n",
+    "        \n",
+    "    def __eq__(self, other):\n",
+    "        self_pointer = self.head\n",
+    "        other_pointer = other.head\n",
+    "        \n",
+    "        while True:\n",
+    "            if self_pointer.value == other_pointer.value:\n",
+    "                self_pointer = self_pointer.next_node\n",
+    "                other_pointer = other_pointer.next_node\n",
+    "                if (self_pointer is None) or (other_pointer is None):  # At least one linked list reaches the end\n",
+    "                    break\n",
+    "            else:\n",
+    "                return False\n",
+    "            \n",
+    "        if (self_pointer is None) and (other_pointer is None):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
     "    def __str__(self):\n",
     "        output = []\n",
     "        pointer = self.head\n",
@@ -214,6 +232,49 @@
     "assert(find_kth_to_last_3(LinkedList.get_ll_from_list([1, 1, 2, 3]), k=1) == 2)\n",
     "assert(find_kth_to_last_3(LinkedList.get_ll_from_list([9, 8, 7, 6]), k=2) == 8)\n",
     "assert(find_kth_to_last_3(LinkedList.get_ll_from_list([777]), k=1) is None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to remove a specified node. (Not given the linked list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_a_node(n):\n",
+    "    n.value = n.next_node.value\n",
+    "    n.next_node = n.next_node.next_node\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1 = Node(3)\n",
+    "n2 = Node(4)\n",
+    "n3 = Node(5)\n",
+    "n4 = Node(6)\n",
+    "\n",
+    "ll = LinkedList()\n",
+    "ll.head = n1\n",
+    "n1.next_node = n2\n",
+    "n2.next_node = n3\n",
+    "n3.next_node = n4\n",
+    "\n",
+    "# str(ll) == '3, 4, 5, 6'\n",
+    "\n",
+    "remove_a_node(n2)\n",
+    "\n",
+    "assert(str(ll) == '3, 5, 6')"
    ]
   },
   {
