Add partition linked list

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -278,6 +278,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to rearrange nodes so that, given a value x, all nodes less than x come first and all nodes greater than or equal to x come later. The partition element x does not need to appear between left and right partitions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partition_by_value_1(ll, x):\n",
+    "    # Divide into two groups, smaller than x, and equal to or greater than x\n",
+    "    part1_list = []  # Smaller than x\n",
+    "    part2_list = []  # Equal to or greater than x\n",
+    "    \n",
+    "    pointer = ll.head\n",
+    "    while pointer is not None:\n",
+    "        if pointer.value < x:\n",
+    "            part1_list.append(pointer)\n",
+    "        else:\n",
+    "            part2_list.append(pointer)\n",
+    "        pointer = pointer.next_node\n",
+    "        \n",
+    "    # Connect all\n",
+    "    combined_list = part1_list + part2_list\n",
+    "    ll.head = combined_list[0]\n",
+    "    pointer = ll.head\n",
+    "    for node in combined_list[1:]:\n",
+    "        pointer.next_node = node\n",
+    "        pointer = node\n",
+    "    pointer.next_node = None\n",
+    "    \n",
+    "    return ll\n",
+    "        \n",
+    "assert(partition_by_value_1(LinkedList.get_ll_from_list([5, 2, 1, 3, 4]), 3) == LinkedList.get_ll_from_list([2, 1, 5, 3, 4]))\n",
+    "assert(partition_by_value_1(LinkedList.get_ll_from_list([5, 2, 1, 3, 4]), 2) == LinkedList.get_ll_from_list([1, 5, 2, 3, 4]))\n",
+    "assert(partition_by_value_1(LinkedList.get_ll_from_list([1, 3, 4]), 5) == LinkedList.get_ll_from_list([1, 3, 4]))\n",
+    "assert(partition_by_value_1(LinkedList.get_ll_from_list([7, 8, 9]), 5) == LinkedList.get_ll_from_list([7, 8, 9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partition_by_value_2(ll, x):\n",
+    "    pointer = ll.head\n",
+    "    end_of_1st = None\n",
+    "    start_of_2nd = None\n",
+    "    end_of_2nd = None\n",
+    "    \n",
+    "    while pointer is not None:\n",
+    "        if pointer.value < x:\n",
+    "            if end_of_1st is not None:\n",
+    "                end_of_1st.next_node = pointer\n",
+    "            else:\n",
+    "                ll.head = pointer\n",
+    "            end_of_1st = pointer\n",
+    "        else:\n",
+    "            if end_of_2nd is not None:\n",
+    "                end_of_2nd.next_node = pointer\n",
+    "            else:\n",
+    "                start_of_2nd = pointer\n",
+    "            end_of_2nd = pointer\n",
+    "        pointer = pointer.next_node\n",
+    "    \n",
+    "    # Edge cases\n",
+    "    if end_of_2nd is None:  # If all nodes are smaller than x\n",
+    "        end_of_1st.next_node = None\n",
+    "    else:\n",
+    "        end_of_2nd.next_node = None\n",
+    "        \n",
+    "    if end_of_1st is None:  # If all nodes are equal to or greater than x\n",
+    "        ll.head = start_of_2nd\n",
+    "    else:\n",
+    "        end_of_1st.next_node = start_of_2nd\n",
+    "            \n",
+    "    return ll\n",
+    "        \n",
+    "assert(partition_by_value_2(LinkedList.get_ll_from_list([5, 2, 1, 3, 4]), 3) == LinkedList.get_ll_from_list([2, 1, 5, 3, 4]))\n",
+    "assert(partition_by_value_2(LinkedList.get_ll_from_list([5, 2, 1, 3, 4]), 2) == LinkedList.get_ll_from_list([1, 5, 2, 3, 4]))\n",
+    "assert(partition_by_value_2(LinkedList.get_ll_from_list([1, 3, 4]), 5) == LinkedList.get_ll_from_list([1, 3, 4]))\n",
+    "assert(partition_by_value_2(LinkedList.get_ll_from_list([7, 8, 9]), 5) == LinkedList.get_ll_from_list([7, 8, 9]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
