--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -367,6 +367,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function that adds two digits represented as linked lists. The digits are stored in reverse order (9 -> 3 -> 5 is 539). Output is also a linked list of the same kind."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(ll1, ll2):\n",
+    "    output = LinkedList()\n",
+    "    \n",
+    "    pointer_1 = ll1.head\n",
+    "    pointer_2 = ll2.head\n",
+    "    carryover = 0\n",
+    "    while (pointer_1 is not None) or (pointer_2 is not None):\n",
+    "        value_1 = pointer_1.value if (pointer_1 is not None) else 0\n",
+    "        value_2 = pointer_2.value if (pointer_2 is not None) else 0\n",
+    "        sum_ = value_1 + value_2 + carryover\n",
+    "        output.add_to_tail(sum_ % 10)\n",
+    "        carryover = sum_ // 10\n",
+    "        \n",
+    "        pointer_1 = pointer_1.next_node if (pointer_1 is not None) else None\n",
+    "        pointer_2 = pointer_2.next_node if (pointer_2 is not None) else None\n",
+    "        \n",
+    "    if carryover > 0:\n",
+    "        output.add_to_tail(carryover)\n",
+    "                                \n",
+    "    return output\n",
+    "\n",
+    "assert(add(LinkedList.get_ll_from_list([7, 1, 6]), \n",
+    "           LinkedList.get_ll_from_list([5, 9, 2])) == LinkedList.get_ll_from_list([2, 1, 9]))\n",
+    "assert(add(LinkedList.get_ll_from_list([9]), \n",
+    "           LinkedList.get_ll_from_list([1, 2, 3])) == LinkedList.get_ll_from_list([0, 3, 3]))\n",
+    "assert(add(LinkedList.get_ll_from_list([9, 7, 8]), \n",
+    "           LinkedList.get_ll_from_list([6, 8, 5])) == LinkedList.get_ll_from_list([5, 6, 4, 1]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
