Add sum of 2 ll, forward order

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,6 +406,50 @@
     "           LinkedList.get_ll_from_list([1, 2, 3])) == LinkedList.get_ll_from_list([0, 3, 3]))\n",
     "assert(add(LinkedList.get_ll_from_list([9, 7, 8]), \n",
     "           LinkedList.get_ll_from_list([6, 8, 5])) == LinkedList.get_ll_from_list([5, 6, 4, 1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write another add function where the digits are not stored in reverse order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_not_reverse(ll1, ll2):\n",
+    "    def reverse(ll):\n",
+    "        # Store values\n",
+    "        values = []\n",
+    "        pointer = ll.head\n",
+    "        while pointer is not None:\n",
+    "            values.append(pointer.value)\n",
+    "            pointer = pointer.next_node\n",
+    "        \n",
+    "        # Overwrite values\n",
+    "        pointer = ll.head\n",
+    "        for i in range(len(values)):\n",
+    "            value = values[len(values) - i - 1]\n",
+    "            pointer.value = value\n",
+    "            pointer = pointer.next_node\n",
+    "            \n",
+    "    reverse(ll1)\n",
+    "    reverse(ll2)\n",
+    "    sum_ = add(ll1, ll2)\n",
+    "    reverse(sum_)\n",
+    "    \n",
+    "    return sum_\n",
+    "\n",
+    "assert(add_not_reverse(LinkedList.get_ll_from_list([6, 1, 7]), \n",
+    "                       LinkedList.get_ll_from_list([2, 9, 5])) == LinkedList.get_ll_from_list([9, 1, 2]))\n",
+    "assert(add_not_reverse(LinkedList.get_ll_from_list([9]), \n",
+    "                       LinkedList.get_ll_from_list([3, 2, 1])) == LinkedList.get_ll_from_list([3, 3, 0]))\n",
+    "assert(add_not_reverse(LinkedList.get_ll_from_list([8, 7, 9]), \n",
+    "                       LinkedList.get_ll_from_list([5, 8, 6])) == LinkedList.get_ll_from_list([1, 4, 6, 5]))"
    ]
   },
   {
