Add ll palindrome

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -453,6 +453,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to check if a linked list is a palindrome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_palindrome(ll):\n",
+    "    if ll.head.next_node is None:  # Only 1 node\n",
+    "        return True\n",
+    "    if ll.head.next_node.next_node is None:  # Only 2 nodes\n",
+    "        return ll.head.value == ll.head.next_node.value\n",
+    "    \n",
+    "    # Find head and tail\n",
+    "    head = ll.head\n",
+    "    pointer = ll.head\n",
+    "    while pointer.next_node is not None:\n",
+    "        pointer = pointer.next_node\n",
+    "    tail = pointer\n",
+    "    \n",
+    "    if head.value == tail.value:\n",
+    "        # Remove head and tail for the next round\n",
+    "        ll.head = ll.head.next_node\n",
+    "        pointer = ll.head\n",
+    "        while pointer.next_node.next_node is not None:\n",
+    "            pointer = pointer.next_node\n",
+    "        pointer.next_node = None\n",
+    "        \n",
+    "        return is_palindrome(ll)\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "assert(is_palindrome(LinkedList.get_ll_from_list(['a', 'b', 'a'])) == True)\n",
+    "assert(is_palindrome(LinkedList.get_ll_from_list(['a', 'b', 'c'])) == False)\n",
+    "assert(is_palindrome(LinkedList.get_ll_from_list(['a', 'b', 'b', 'a'])) == True)\n",
+    "assert(is_palindrome(LinkedList.get_ll_from_list(['a', 'b', 'c', 'a'])) == False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
