Minor format updates

--- a/visualization/donut_chart.ipynb
+++ b/visualization/donut_chart.ipynb
@@ -41,7 +41,8 @@
     "        all_labels.update(list(dct2.keys()))\n",
     "                \n",
     "    colors_dict = {}\n",
-    "    palette = ['#ffb3ba', '#ffdfba', '#baffc9', '#bae1ff', '#E0BBE4']  # pink, orange, green, blue, purple\n",
+    "    palette = ['#ffb3ba', '#ffdfba', '#baffc9', '#bae1ff', '#E0BBE4']  \n",
+    "               # pink, orange, green, blue, purple\n",
     "    for i, label in enumerate(sorted(all_labels)):\n",
     "        colors_dict[label] = palette[i]\n",
     "        \n",
@@ -66,8 +67,8 @@
     "        plt.subplot(n_row, n_col, i+1)  # Indicate subplot location\n",
     "        plt.title(key, fontsize=25)\n",
     "\n",
-    "        patches, texts, autotexts = plt.pie(values, explode=[0.03]*len(labels), labels=labels, colors=colors, \n",
-    "                                            autopct='%1.1f%%', pctdistance=0.85, startangle=90, counterclock=False)\n",
+    "        _, texts, autotexts = plt.pie(values, explode=[0.03]*len(labels), labels=labels, colors=colors, \n",
+    "                                      autopct='%1.1f%%', pctdistance=0.85, startangle=90, counterclock=False)\n",
     "        for i in range(len(texts)):\n",
     "            texts[i].set_fontsize(17)  # For labels\n",
     "            autotexts[i].set_fontsize(14)  # For values\n",
