--- a/algo_and_ds/interview_question.ipynb
+++ b/algo_and_ds/interview_question.ipynb
@@ -4,33 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interview question for ML Engineer at a professional networking site (February, 2018)"
+    "### Interview question for ML Engineer at a professional networking site (February, 2018)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "/* This class will be given a list of words (such as might be tokenized\n",
-    " * from a paragraph of text), and will provide a method that takes two\n",
-    " * words and returns the shortest distance (in words) between those two\n",
-    " * words in the provided text.\n",
-    " * Example:\n",
-    " *   WordDistanceFinder finder = new WordDistanceFinder(Arrays.asList(\"the\", \"quick\", \"brown\", \"fox\", \"quick\"));\n",
-    " *   assert(finder.distance(\"fox\", \"the\") == 3);\n",
-    " *   assert(finder.distance(\"quick\", \"fox\") == 1);\n",
-    " *\n",
-    " * \"quick\" appears twice in the input. There are two possible distance values for \"quick\" and \"fox\":\n",
-    " *     (3 - 1) = 2 and (4 - 3) = 1.\n",
-    " * Since we have to return the shortest distance between the two words we return 1.\n",
-    " */\n",
-    "public class WordDistanceFinder {\n",
-    "    public WordDistanceFinder (List<String> words) {\n",
-    "        // implementation here\n",
-    "    }\n",
-    "    public int distance (String wordOne, String wordTwo) {\n",
-    "        // implementation here\n",
-    "    }\n",
+    "/* This class will be given a list of words (such as might be tokenized<br>\n",
+    "&nbsp;\\* from a paragraph of text), and will provide a method that takes two<br>\n",
+    "&nbsp;\\* words and returns the shortest distance (in words) between those two<br>\n",
+    "&nbsp;\\* words in the provided text.<br>\n",
+    "&nbsp;\\* Example:<br>\n",
+    "&nbsp;\\*   WordDistanceFinder finder = new WordDistanceFinder(Arrays.asList(\"the\", \"quick\", \"brown\", \"fox\", \"quick\"));<br>\n",
+    "&nbsp;\\*   assert(finder.distance(\"fox\", \"the\") == 3);<br>\n",
+    "&nbsp;\\*   assert(finder.distance(\"quick\", \"fox\") == 1);<br>\n",
+    "&nbsp;\\*<br>\n",
+    "&nbsp;\\* \"quick\" appears twice in the input. There are two possible distance values for \"quick\" and \"fox\":<br>\n",
+    "&nbsp;\\*     (3 - 1) = 2 and (4 - 3) = 1.<br>\n",
+    "&nbsp;\\* Since we have to return the shortest distance between the two words we return 1.<br>\n",
+    "&nbsp;\\*/<br>\n",
+    "public class WordDistanceFinder {<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;public WordDistanceFinder (List<String> words) {<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// implementation here<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;public int distance (String wordOne, String wordTwo) {<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// implementation here<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>\n",
     "}"
    ]
   },
