--- a/algo_and_ds/interview_question.ipynb
+++ b/algo_and_ds/interview_question.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "/* This class will be given a list of words (such as might be tokenized<br>\n",
+    "/\\* This class will be given a list of words (such as might be tokenized<br>\n",
     "&nbsp;\\* from a paragraph of text), and will provide a method that takes two<br>\n",
     "&nbsp;\\* words and returns the shortest distance (in words) between those two<br>\n",
     "&nbsp;\\* words in the provided text.<br>\n",
@@ -25,7 +25,7 @@
     "&nbsp;\\* Since we have to return the shortest distance between the two words we return 1.<br>\n",
     "&nbsp;\\*/<br>\n",
     "public class WordDistanceFinder {<br>\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;public WordDistanceFinder (List<String> words) {<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;public WordDistanceFinder (List&lt;String&gt; words) {<br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// implementation here<br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;public int distance (String wordOne, String wordTwo) {<br>\n",
