Add find intersection

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -497,6 +497,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function to check if two linked lists have an intersection, where intersection is defined by nodes having the same reference, not the same value. Return the intersecting node (the first intersecting node)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_intersection(ll1, ll2):\n",
+    "    #1. Get # of nodes of each list, and last node\n",
+    "    def get_len_and_last_node(ll):\n",
+    "        count = 1\n",
+    "        node = ll.head\n",
+    "        while node.next_node is not None:\n",
+    "            count += 1\n",
+    "            node = node.next_node\n",
+    "        return count, node\n",
+    "    \n",
+    "    len_ll1, last_node_1 = get_len_and_last_node(ll1)\n",
+    "    len_ll2, last_node_2 = get_len_and_last_node(ll2)\n",
+    "        \n",
+    "    #2. If last node is different, no intersection\n",
+    "    if last_node_1 != last_node_2:\n",
+    "        return None\n",
+    "    \n",
+    "    #3. Skip to the aligned start\n",
+    "    node_1 = ll1.head\n",
+    "    node_2 = ll2.head\n",
+    "    \n",
+    "    if len_ll1 > len_ll2:\n",
+    "        for _ in range(len_ll1 - len_ll2):\n",
+    "            node_1 = node_1.next_node\n",
+    "    else:\n",
+    "        for _ in range(len_ll2 - len_ll1):\n",
+    "            node_2 = node_2.next_node\n",
+    "    \n",
+    "    #4. Check if nodes are the same\n",
+    "    while node_1 is not None:\n",
+    "        if node_1 == node_2:  # Intersection\n",
+    "            return node_1\n",
+    "        else:\n",
+    "            node_1 = node_1.next_node\n",
+    "            node_2 = node_2.next_node\n",
+    "    \n",
+    "    #5. No intersection\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1 = Node(1)\n",
+    "n2 = Node(2)\n",
+    "n3 = Node(3)\n",
+    "n4 = Node(4)\n",
+    "n5 = Node(5)\n",
+    "n6 = Node(6)\n",
+    "n7 = Node(7)\n",
+    "n8 = Node(8)\n",
+    "n9 = Node(9)\n",
+    "n10 = Node(1)\n",
+    "\n",
+    "ll1 = LinkedList()  # n1 -> n2 -> n3 -> n4 -> n5\n",
+    "ll2 = LinkedList()  # n6 -> n7 -> n8 -> n4 -> n5\n",
+    "ll3 = LinkedList()  # n9 -> n10\n",
+    "\n",
+    "ll1.head = n1\n",
+    "ll2.head = n6\n",
+    "ll3.head = n9\n",
+    "\n",
+    "n1.next_node = n2\n",
+    "n2.next_node = n3\n",
+    "n3.next_node = n4\n",
+    "n4.next_node = n5\n",
+    "n6.next_node = n7\n",
+    "n7.next_node = n8\n",
+    "n8.next_node = n4\n",
+    "n9.next_node = n10\n",
+    "\n",
+    "assert(get_intersection(ll1, ll2) == n4)\n",
+    "assert(get_intersection(ll1, ll3) is None)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
