Add find the beginning of loop

--- a/algo_and_ds/linked_lists.ipynb
+++ b/algo_and_ds/linked_lists.ipynb
@@ -588,6 +588,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Given a circular linked list, write a function that returns the beginning node of the loop.\n",
+    "\n",
+    "Algorithm explained here. https://www.youtube.com/watch?v=apIw0Opq5nk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_first_node_of_loop(ll):\n",
+    "    #1. Slow and Fast meet in a loop\n",
+    "    slow = ll.head\n",
+    "    fast = ll.head\n",
+    "    \n",
+    "    while True:\n",
+    "        slow = slow.next_node\n",
+    "        fast = fast.next_node.next_node\n",
+    "                \n",
+    "        if slow == fast:\n",
+    "            break\n",
+    "    \n",
+    "    #2. Move slow back to the head. \n",
+    "    #   Move both by 1 till meet again at the beginning of the loop\n",
+    "    slow = ll.head\n",
+    "    \n",
+    "    while True:\n",
+    "        slow = slow.next_node\n",
+    "        fast = fast.next_node\n",
+    "        if slow == fast:\n",
+    "            break\n",
+    "            \n",
+    "    return slow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1 = Node(1)\n",
+    "n2 = Node(2)\n",
+    "n3 = Node(3)\n",
+    "n4 = Node(4)\n",
+    "\n",
+    "ll = LinkedList()  # n1 -> n2 -> n3 -> n4 -> n2\n",
+    "\n",
+    "ll.head = n1\n",
+    "\n",
+    "n1.next_node = n2\n",
+    "n2.next_node = n3\n",
+    "n3.next_node = n4\n",
+    "n4.next_node = n2\n",
+    "\n",
+    "assert(get_first_node_of_loop(ll) == n2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
